Fixed address, phone#

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <li><a href="#skills">Skills & Tools</a></li>
       <li><a href="#">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><p class="navbar-text">(+46) 111 01 02 03</p></li>
+      <li><p class="navbar-text">(+46) 707 455 390</p></li>
     </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -165,8 +165,8 @@
         <ul class="list-unstyled">
           <li>HencJo AB<li>
           <li>Johannebergsgatan 24</li>
-          <li>412 55, Göteborg</li>
-          <li>(+46) 111 01 02 03</li>
+          <li>412 55 Göteborg</li>
+          <li>(+46) 707 455 390</li>
           <li><a href="mailto:henrik@hencjo.com">henrik@hencjo.com</a></li>
           <ul class="list-inline list-social">
             <li><a id="github" href="https://github.com/hencjo"><img src="img/github.svg"></a></li>
