--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="col-xs-4">
         <h4>Company information</h4>
         <ul class="list-unstyled">
-          <li>HencJo AB<li>
+          <li>Hencjo AB<li>
           <li>Johannebergsgatan 24</li>
           <li>412 55 Göteborg</li>
           <li>(+46) 707 455 390</li>
