--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <ul class="list-inline list-social">
             <li><a id="github" href="https://github.com/hencjo"><img src="img/github.svg"></a></li>
             <li><a id="twitter" href="https://twitter.com/hencjo"><img src="img/twitter.svg"></a></li>
-            <li><a id="linkedin" href="https://twitter.com/hencjo"><img src="img/linkedin.svg"></a></li>
+            <li><a id="linkedin" href="https://se.linkedin.com/in/hencjo/"><img src="img/linkedin.svg"></a></li>
           </ul>
         </ul>
         <h4>Organizing</h4>
