Beers -> Scrum Beers

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </ul>
         <h4>Organizing</h4>
         <ul class="list-unstyled">
-          <li><a href="http://scrumbeers.com">Beers Göteborg</a></li>
+          <li><a href="http://scrumbeers.com">Scrum Beers Göteborg</a></li>
           <li><a href="http://brewingagile.org">Brewing Agile</a></li>
         </ul>
       </div>
