Commented out CV-link.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <li>Open-Source contributor and Co-Organizer of Scrum Beers meetups and the Brewing Agile conference series</li>
           <li>University studies in Computer Science and Engineering at Chalmers University, Gothenburg.</li>
         </ul>
-        <p>Please <a href="">download my CV</a> for full information</p>
+        <!-- p>Please <a href="">download my CV</a> for full information</p -->
         <h3>Open-Source Contributions</h3>
         <ul >
           <li><a href="https://github.com/hencjo/summer-security">Summer Security</a> (in use at Com Hem)</li>
