Updated Google Maps to use no API key.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 <!-- Change this API key to your own -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt68p1plYbzu4O1_j9CSecUDSAINPxULY&sensor=false" type="text/javascript"></script>
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
 
 <script>
   function initialize() {
