Some fancy headline -> introduction.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <section class="presentation" id="presentation">
     <div class="container">
-        <h2>Some fancy headline for this section</h2>
+        <h2>Introduction</h2>
         <p>I’ve always had a genuine interest for computers and programming. It all started back in 1994 with Quick Basic. With this interest follows that I explore and improve my work continuously. During my professional career I’ve gone from trying to find “silver bullets” (libraries and frameworks) to accepting that nothing can replace knowing the entire stack and keeping things as simple and lean as possible. This means that I always question everything.</p>
         <p>Getting thrown straight into the action of something that’s falling apart is part of what I love. I’ve acquired techniques for quickly patching things up and to get to a “safe” state. A state where the product can be gradually improved with minimal risk and whilst adding features. I don’t believe in “big bang integrations” or “the complete rewrite” but to work in small batches, each validated and delivered.</p>
     </div>
