--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p>
             <span>Hello! My name is</span>
             <span class="name">Henrik Johansson</span>
-            <span>I’m an experienced software architect who is fanatical about improving the way software is created.</span>
+            <span>I’m an experienced software developer who is fanatical about improving the way software is made.</span>
           </p>
         </div>
       </div>
