--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
   <div class="container">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
       <!-- Indicators -->
-      <ol class="carousel-indicators">
+      <!-- ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      </ol>
+      </ol -->
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
@@ -75,12 +75,12 @@
             <footer>Leo Palmberg, VP Product Management, Visionael</footer>
           </blockquote>
         </div>
-        <div class="item">
+        <!--div class="item">
           <blockquote>
             <p>Henrik has consistently proved a level of commitment, integrity and accountability beyond his duties as well as in day-to-day operations as in challenging, customer-facing software product delivery phases. Henrik was essential in the introduction and successful proliferation of agile development practices and processes resulting in substantial business benefits.</p>
             <footer>Leo Palmberg, VP Product Management, Visionael</footer>
           </blockquote>
-        </div>
+        </div-->
       </div>
     </div>
   </div>
@@ -100,19 +100,19 @@
       <div class="col-sm-6">
         <h2>Skills and tools</h2>
         <p>During the years I’ve encountered and worked with a mix of technologies; among them:</p>
-        <p><em class="discrete">ActiveMQ, AngularJS, AJAX, Apache HTTP-server and Tomcat, Cayenne ORM, CouchDB, Eclipse, EJB3, Filemaker, Functional Java, JSON, Git, GlassFish, Google Guava, Haskell, Hibernate, Jackson, Jasmine, J2SE, J2EE, JBoss, JSF, JSON, Lasso, MongoDB, MySQL, PHP, PostgreSQL, RabbitMQ, REST, Scala, ServiceMix ESB, Subversion, Struts, Tapestry, TestNG, XML</em></p>
-        <p>However, I would not recommend most of them. Linux and Eclipse is my preferred environment.</p>
-        <h3>Favorite set of technologies for a Java webapp</h3>
-        <p><em class="discrete">Maven, Git, Jenkins (Hudson CI), jUnit, Jackson (JSON Serialization), Jersey (JAX-RS REST), jQuery, AngularJS, PostgreSQL, Jetty, Twitter Bootstrap.</em></p>
-        <h3>For a Scala webapp</h3>
-        <p><em class="discrete">SBT, Git, Jetty, jQuery, AngularJS, ScalaCheck and Specs, Unfiltered, Scalate, Anorm or ScalaQuery, PostgreSQL</em></p>
+        <p><em class="discrete">ActiveMQ, AngularJS, AJAX, Apache HTTP-server and Tomcat, Cayenne ORM, CouchDB, Eclipse, EJB3, Filemaker, Functional Java, JSON, Git, GlassFish, Google Guava, Gradle, Haskell, Hibernate, IntelliJ, Jackson, Jasmine, J2SE, J2EE, JBoss, JSF, jOOQ, JSON, Lasso, MongoDB, MySQL, Oracle, PHP, PostgreSQL, RabbitMQ, REST, Scala, ServiceMix ESB, Subversion, Struts, Tapestry, TestNG, XML</em></p>
+        <p>However, I would not recommend most of them. Linux and IntelliJ is my preferred environment.</p>
+        <h3>Preferred stack for a Java webapp</h3>
+        <p><em class="discrete">Gradle, Git, Jenkins (Hudson CI), jUnit, Jackson (JSON Serialization), Jersey (JAX-RS REST), AngularJS, PostgreSQL, Jetty, Twitter Bootstrap, NO Application Server.</em></p>
+        <h3>For a Haskell webapp</h3>
+        <p><em class="discrete">Snap, Git, AngularJS, PostgreSQL</em></p>
       </div>
       <div class="col-sm-6">
         <h2>Profile</h2>
         <ul >
-          <li>11 years experience of Java, 6 years of JavaEE.</li>
+          <li>12 years experience of Java, 7 years of Enterprise-grade Java.</li>
           <li>1 year professional experience of Scala, but tinkered for 3 years.</li>
-          <li>Focusing on high quality application development for the web  using the Java ecosystem.</li>
+					<li>Applying Functional Programming to build high quality application development for the web using the Java ecosystem.</li>
           <li>Certified scrum master, with 6 years practical experience.</li>
           <li>Open-Source contributor and Co-Organizer of Scrum Beers meetups and the Brewing Agile conference series</li>
           <li>University studies in Computer Science and Engineering at Chalmers University, Gothenburg.</li>
