Removed ajax. Noone says that anymore.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="col-sm-6">
         <h2>Skills and tools</h2>
         <p>During the years I’ve encountered and worked with a mix of technologies; among them:</p>
-        <p><em class="discrete">ActiveMQ, AngularJS, AJAX, Apache HTTP server and Tomcat, Cayenne ORM, CouchDB, Eclipse, EJB3, Filemaker, Functional Java, JSON, Git, GlassFish, Google Guava, Gradle, Haskell, Hibernate, IntelliJ, Jackson, Jasmine, J2SE, J2EE, JBoss, JSF, jOOQ, JSON, Lasso, MongoDB, MySQL, Oracle, PHP, PostgreSQL, RabbitMQ, REST, Scala, ServiceMix ESB, Subversion, Struts, Tapestry, TestNG, XML</em></p>
+        <p><em class="discrete">ActiveMQ, AngularJS, Apache HTTP server and Tomcat, Cayenne ORM, CouchDB, Eclipse, EJB3, Filemaker, Functional Java, JSON, Git, GlassFish, Google Guava, Gradle, Haskell, Hibernate, IntelliJ, Jackson, Jasmine, J2SE, J2EE, JBoss, JSF, jOOQ, JSON, Lasso, MongoDB, MySQL, Oracle, PHP, PostgreSQL, RabbitMQ, REST, Scala, ServiceMix ESB, Subversion, Struts, Tapestry, TestNG, XML</em></p>
         <p>However, I would not recommend most of them. Linux and IntelliJ is my preferred environment.</p>
         <h3>Preferred stack for a Java webapp</h3>
         <p><em class="discrete">Gradle, Git, Jenkins (Hudson CI), JUnit, Jackson (JSON Serialization), Jersey (JAX-RS REST), AngularJS, PostgreSQL, Jetty, Twitter Bootstrap, NO Application Server.</em></p>
