--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="fdKysHJtY-GHKQq4m5oP1j39PQKsuqmUtOVOFeK_tjU" />
-  <title>Hencjo AB - Henrik Johansson</title>
+  <title>Hencjo AB - Henrik Sjöstrand</title>
 
   <!-- Customized Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -51,7 +51,7 @@
         <div class="col-sm-5 col-md-6 col-lg-7">
           <p>
             <span>Hello! My name is</span>
-            <span class="name">Henrik Johansson</span>
+            <span class="name">Henrik Sjöstrand</span>
             <span>I’m an experienced software developer who is fanatical about improving the way software is made.</span>
           </p>
         </div>
