--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Hencjo AB - Henrik Sjöstrand</title>
 
   <!-- Customized Bootstrap -->
+  <link rel="stylesheet" href="https://use.typekit.net/rog6qqf.css">
   <link rel="stylesheet" href="css/bootstrap.css">
+
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
